@@ -70,7 +70,8 @@ internal to the implementation. All the key interfaces and classes are in the ma
 package while the format package will be of interest for formatting.
 </p>
 <p>
-Joda-Time is standalone and has no dependencies other than JDK 1.2.
+Joda-Time is standalone and has no dependencies other than JDK 1.3.
+(The jar file may work on JDK 1.2, but it is untested.)
 It is licenced under an Apache/BSD style licence.
 </p>
 </body>
